--- a/notebooks/llm_insights.ipynb
+++ b/notebooks/llm_insights.ipynb
@@ -34,7 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DEBUG: Applying APP_ID from environment: 'in.goindigo.android'\n"
+      "DEBUG: Applying APP_ID from environment: 'com.fss.indus'\n"
      ]
     }
    ],
@@ -302,7 +302,7 @@
      "output_type": "stream",
      "text": [
       "Loading preprocessed reviews from: /Users/dipesh/Local-Projects/indigo-reviews-ai/data/processed/processed_reviews.csv\n",
-      "Successfully loaded 10000 preprocessed reviews\n"
+      "Successfully loaded 5000 preprocessed reviews\n"
      ]
     },
     {
@@ -334,33 +334,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>very nice</td>\n",
-       "      <td>very nice</td>\n",
-       "      <td>nice</td>\n",
+       "      <td>good</td>\n",
+       "      <td>good</td>\n",
+       "      <td>good</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>very bad interface, booked a normal fare ticke...</td>\n",
-       "      <td>very bad interface booked a normal fare ticket...</td>\n",
-       "      <td>bad interface booked normal fare ticket even s...</td>\n",
+       "      <td>such an irritating app is this. you will open ...</td>\n",
+       "      <td>such an irritating app is this you will open t...</td>\n",
+       "      <td>irritating app open important work everytime r...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>good update information</td>\n",
-       "      <td>good update information</td>\n",
-       "      <td>good update information</td>\n",
+       "      <td>good nice</td>\n",
+       "      <td>good nice</td>\n",
+       "      <td>good nice</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>sucks big time</td>\n",
-       "      <td>sucks big time</td>\n",
-       "      <td>suck big time</td>\n",
+       "      <td>app is not opening, please rectify</td>\n",
+       "      <td>app is not opening please rectify</td>\n",
+       "      <td>app opening please rectify</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>worst app and worst website, its like some chi...</td>\n",
-       "      <td>worst app and worst website its like some chil...</td>\n",
-       "      <td>worst app worst website like child developed w...</td>\n",
+       "      <td>after upgrade its converted to worst app. and ...</td>\n",
+       "      <td>after upgrade its converted to worst app and n...</td>\n",
+       "      <td>upgrade converted worst app supported mobile</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -368,25 +368,25 @@
       ],
       "text/plain": [
        "                                                text  \\\n",
-       "0                                          very nice   \n",
-       "1  very bad interface, booked a normal fare ticke...   \n",
-       "2                            good update information   \n",
-       "3                                     sucks big time   \n",
-       "4  worst app and worst website, its like some chi...   \n",
+       "0                                               good   \n",
+       "1  such an irritating app is this. you will open ...   \n",
+       "2                                          good nice   \n",
+       "3                 app is not opening, please rectify   \n",
+       "4  after upgrade its converted to worst app. and ...   \n",
        "\n",
        "                                        cleaned_text  \\\n",
-       "0                                          very nice   \n",
-       "1  very bad interface booked a normal fare ticket...   \n",
-       "2                            good update information   \n",
-       "3                                     sucks big time   \n",
-       "4  worst app and worst website its like some chil...   \n",
+       "0                                               good   \n",
+       "1  such an irritating app is this you will open t...   \n",
+       "2                                          good nice   \n",
+       "3                  app is not opening please rectify   \n",
+       "4  after upgrade its converted to worst app and n...   \n",
        "\n",
        "                                     normalized_text  \n",
-       "0                                               nice  \n",
-       "1  bad interface booked normal fare ticket even s...  \n",
-       "2                            good update information  \n",
-       "3                                      suck big time  \n",
-       "4  worst app worst website like child developed w...  "
+       "0                                               good  \n",
+       "1  irritating app open important work everytime r...  \n",
+       "2                                          good nice  \n",
+       "3                         app opening please rectify  \n",
+       "4       upgrade converted worst app supported mobile  "
       ]
      },
      "metadata": {},
@@ -398,29 +398,29 @@
      "text": [
       "\n",
       "Dataset summary:\n",
-      "Total reviews: 10000\n",
+      "Total reviews: 5000\n",
       "Rating distribution:\n",
       "rating\n",
-      "1    3688\n",
-      "2     549\n",
-      "3     539\n",
-      "4     822\n",
-      "5    4402\n",
+      "1    2624\n",
+      "2     173\n",
+      "3     166\n",
+      "4     285\n",
+      "5    1752\n",
       "Name: count, dtype: int64\n",
       "\n",
       "Rating percentages:\n",
       "rating\n",
-      "1    36.9\n",
-      "2     5.5\n",
-      "3     5.4\n",
-      "4     8.2\n",
-      "5    44.0\n",
+      "1    52.5\n",
+      "2     3.5\n",
+      "3     3.3\n",
+      "4     5.7\n",
+      "5    35.0\n",
       "Name: count, dtype: float64\n",
       "\n",
-      "Date range: 2023-08-27 12:35:07 to 2025-05-07 12:19:43\n",
+      "Date range: 2025-01-19 10:03:35 to 2025-05-07 18:18:21\n",
       "\n",
       "Top 15 most frequent words:\n",
-      "[('app', 2948), ('good', 2330), ('flight', 1194), ('indigo', 1172), ('booking', 915), ('service', 871), ('time', 771), ('experience', 663), ('worst', 636), ('nice', 557), ('ticket', 537), ('even', 488), ('customer', 444), ('airline', 443), ('excellent', 440)]\n",
+      "[('app', 1613), ('good', 1214), ('service', 897), ('bank', 814), ('customer', 678), ('worst', 649), ('card', 472), ('care', 386), ('bad', 378), ('account', 351), ('working', 304), ('credit', 300), ('nice', 271), ('device', 256), ('experience', 229)]\n",
       "\n",
       "Using text preprocessing columns for analysis: True\n"
      ]
@@ -1044,26 +1044,54 @@
     "        )\n",
     "        \n",
     "        # Focus areas widget - Updated for airline app\n",
+    "        # self.focus_area_widget = widgets.SelectMultiple(\n",
+    "        #     options=[\n",
+    "        #         'App Performance & Stability',\n",
+    "        #         'Booking Experience',\n",
+    "        #         'Check-in Process',\n",
+    "        #         'Customer Support',\n",
+    "        #         'Payment System',\n",
+    "        #         'User Interface & Design',\n",
+    "        #         'Flight Information & Updates',\n",
+    "        #         'Loyalty Program & Miles',\n",
+    "        #         'In-app Features',\n",
+    "        #         'Flight Modifications & Cancellations',\n",
+    "        #         'Baggage Information',\n",
+    "        #         'Boarding Pass & Digital Documents'\n",
+    "        #     ],\n",
+    "        #     value=['App Performance & Stability', 'Booking Experience', 'Check-in Process', \n",
+    "        #            'Payment System', 'User Interface & Design'],\n",
+    "        #     description='Focus Areas:',\n",
+    "        #     style={'description_width': 'initial'},\n",
+    "        #     layout=widgets.Layout(width='500px', height='200px')  # Made taller for more options\n",
+    "        # )\n",
+    "\n",
+    "        # Focus areas widget - Updated for bank mobile app\n",
     "        self.focus_area_widget = widgets.SelectMultiple(\n",
     "            options=[\n",
     "                'App Performance & Stability',\n",
-    "                'Booking Experience',\n",
-    "                'Check-in Process',\n",
+    "                'Account Management',\n",
+    "                'Fund Transfers & Payments',\n",
+    "                'Security & Fraud Prevention',\n",
     "                'Customer Support',\n",
-    "                'Payment System',\n",
     "                'User Interface & Design',\n",
-    "                'Flight Information & Updates',\n",
-    "                'Loyalty Program & Miles',\n",
-    "                'In-app Features',\n",
-    "                'Flight Modifications & Cancellations',\n",
-    "                'Baggage Information',\n",
-    "                'Boarding Pass & Digital Documents'\n",
+    "                'Transaction History & Statements',\n",
+    "                'Loan & Credit Services',\n",
+    "                'Investment & Wealth Management',\n",
+    "                'Notifications & Alerts',\n",
+    "                'Digital Wallet & Card Management',\n",
+    "                'Onboarding & KYC Process',\n",
+    "                'Mobile Check Deposit',\n",
+    "                'Personal Finance Tools',\n",
+    "                'Branch & ATM Locator',\n",
+    "                'Multi-factor Authentication',\n",
+    "                'Personalization & Customization'\n",
     "            ],\n",
-    "            value=['App Performance & Stability', 'Booking Experience', 'Check-in Process', \n",
-    "                   'Payment System', 'User Interface & Design'],\n",
+    "            value=['App Performance & Stability', 'Account Management', 'Fund Transfers & Payments', \n",
+    "                'User Interface & Design', 'Security & Fraud Prevention'],\n",
     "            description='Focus Areas:',\n",
     "            style={'description_width': 'initial'},\n",
-    "            layout=widgets.Layout(width='500px', height='200px')  # Made taller for more options\n",
+    "            layout=widgets.Layout(width='500px', height='250px')  # Adjusted height for more options\n",
     "        )\n",
     "        \n",
     "        # Output areas\n",
@@ -1248,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc25ba909b2e489e9bedaf68546246ba",
+       "model_id": "f6dab648313644a49bad55f08f13b50f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1292,9 +1320,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "# Manual Insight Generation Example\n",
+      "# To run this analysis, change run_example to True and execute the cell\n",
+      "\n",
+      "insights = generate_custom_insights(\n",
+      "    sample_size=150,        # Number of reviews to sample\n",
+      "    rating_focus='balanced',  # Get a mix of all ratings\n",
+      "    clustering='auto',     # Use automatic clustering\n",
+      "    model='gpt-4o',        # Use GPT-4o model\n",
+      "    focus_areas=[\n",
+      "        'App Performance & Stability',\n",
+      "        'Booking Experience', \n",
+      "        'Check-in Process',\n",
+      "        'Payment System',\n",
+      "        'User Interface & Design',\n",
+      "        'Flight Information & Updates'\n",
+      "    ]\n",
+      ")\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Example: Generate insights manually with custom parameters\n",
     "# Set to False to see the example without actually running it\n",
@@ -1348,14 +1402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Insights saved to: /Users/dipesh/Local-Projects/indigo-reviews-ai/reports/insights/insights_negative_600_2025-05-08_14-56-52.md\n"
+      "Insights saved to: /Users/dipesh/Local-Projects/indigo-reviews-ai/reports/insights/insights_negative_600_2025-05-08_18-44-41.md\n"
      ]
     }
    ],
