--- a/notebooks/review_analysis_demo.ipynb
+++ b/notebooks/review_analysis_demo.ipynb
@@ -25601,9 +25601,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating rating distribution...\n",
+      "Generating sentiment distribution...\n",
+      "Generating topic distribution...\n",
+      "Generating version rating visualization...\n",
+      "Generating sentiment by version visualization...\n",
+      "Generating time trend visualization...\n",
+      "Generating major version trends...\n",
+      "Generating rating by version range...\n",
+      "Generating sentiment by version range...\n",
+      "Generating developer response analysis...\n",
+      "Generating rating heatmap by month...\n",
+      "Generating sentiment over time...\n",
+      "Generating version volume over time...\n",
+      "Generating response vs rating comparison...\n",
+      "Generating data tables...\n",
+      "\n",
+      "Generating comprehensive HTML dashboard...\n",
+      "Comprehensive dashboard created at: reports/full_dashboard_20250508_203242/indus_dashboard.html\n",
+      "\n",
+      "Dashboard includes:\n",
+      "- Executive Summary with key findings and AI insights\n",
+      "- Ratings & Sentiment Analysis with detailed breakdowns\n",
+      "- Version Analysis with performance metrics across app versions\n",
+      "- Topic Analysis showing key topics in user reviews\n",
+      "- Time Trends showing how metrics have changed over time\n",
+      "- Developer Response Analysis showing who gets responses\n",
+      "- Data Tables with detailed metrics and comparisons\n",
+      "\n",
+      "Open the HTML file in a web browser to view all visualizations, tables, and insights in one place.\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a comprehensive dashboard with all our analyses\n",
     "import os\n",
@@ -25966,16 +26002,19 @@
     "print(\"Generating rating by version range...\")\n",
     "# Default version ranges\n",
     "version_ranges = {\n",
-    "    \"Latest\": analyzed_df[analyzed_df['major_version'] >= 7].copy(),\n",
-    "    \"Current\": analyzed_df[analyzed_df['major_version'] == 6].copy(),\n",
-    "    \"Older\": analyzed_df[analyzed_df['major_version'] == 5].copy(),\n",
+    "    \"Latest\": analyzed_df[analyzed_df['major_version'] >= 11].copy(),\n",
+    "    \"Current\": analyzed_df[analyzed_df['major_version'] == 10].copy(),\n",
+    "    \"Older\": analyzed_df[\n",
+    "        (analyzed_df['major_version'] >= 8) & \n",
+    "        (analyzed_df['major_version'] < 10)\n",
+    "    ].copy(),\n",
     "    \"Unknown\": analyzed_df[analyzed_df['version'] == \"Unknown\"].copy()\n",
     "}\n",
     "\n",
     "# Create subplots for rating distributions\n",
     "rating_by_range_fig = make_subplots(\n",
     "    rows=2, cols=2,\n",
-    "    subplot_titles=[\"Latest Versions (7+)\", \"Current Versions (6.x)\", \"Older Versions (5.x)\", \"Unknown Versions\"],\n",
+    "    subplot_titles=[\"Latest Versions (11+)\", \"Current Versions (10.x)\", \"Older Versions (8.x to below 10)\", \"Unknown Versions\"],\n",
     "    shared_yaxes=True\n",
     ")\n",
     "\n",
@@ -26926,6 +26965,17 @@
     "            <div id=\"ratings-sentiment\" class=\"tab-content\">\n",
     "                <h3>Ratings & Sentiment Analysis</h3>\n",
     "                \n",
+    "                <div class=\"version-insight-box\">\n",
+    "                    <h4>Rating vs. Sentiment Analysis</h4>\n",
+    "                    <p>While ratings provide a numerical measure of user satisfaction, sentiment analysis \n",
+    "                    captures emotional aspects from review text. Key insights:</p>\n",
+    "                    <ul>\n",
+    "                        <li>Most 1-2 star reviews express negative sentiment about technical issues</li>\n",
+    "                        <li>4-5 star reviews with mixed sentiment often praise core functionality while noting specific improvements</li>\n",
+    "                        <li>The high proportion of neutral sentiment (5.39%) indicates reviews that factually describe experiences without strong emotion</li>\n",
+    "                    </ul>\n",
+    "                </div>\n",
+    "\n",
     "                <div class=\"row\">\n",
     "                    <div class=\"col-12\">\n",
     "                        <div class=\"viz-container\">\n",
@@ -26970,27 +27020,31 @@
     "                <div class=\"row\">\n",
     "                    <div class=\"col-6\">\n",
     "                        <div class=\"viz-container\">\n",
-    "                            <h4>Sentiment Distribution: Latest Versions (7+)</h4>\n",
+    "                            <h4>Sentiment Distribution: Latest Versions (11+)</h4>\n",
     "                            <div id=\"sentiment_latest_plot\" class=\"plot-container\"></div>\n",
     "                        </div>\n",
     "                    </div>\n",
     "                    <div class=\"col-6\">\n",
     "                        <div class=\"viz-container\">\n",
-    "                            <h4>Sentiment Distribution: Current Versions (6.x)</h4>\n",
+    "                            <h4>Sentiment Distribution: Current Versions (10.x)</h4>\n",
     "                            <div id=\"sentiment_current_plot\" class=\"plot-container\"></div>\n",
     "                        </div>\n",
     "                    </div>\n",
     "                </div>\n",
-    "                \n",
-    "                <div class=\"version-insight-box\">\n",
-    "                    <h4>Rating vs. Sentiment Analysis</h4>\n",
-    "                    <p>While ratings provide a numerical measure of user satisfaction, sentiment analysis \n",
-    "                    captures emotional aspects from review text. Key insights:</p>\n",
-    "                    <ul>\n",
-    "                        <li>Most 1-2 star reviews express negative sentiment about technical issues</li>\n",
-    "                        <li>4-5 star reviews with mixed sentiment often praise core functionality while noting specific improvements</li>\n",
-    "                        <li>The high proportion of neutral sentiment (5.39%) indicates reviews that factually describe experiences without strong emotion</li>\n",
-    "                    </ul>\n",
+    "\n",
+    "                <div class=\"row\">\n",
+    "                    <div class=\"col-6\">\n",
+    "                    <div class=\"viz-container\">\n",
+    "                        <h4>Sentiment Distribution: Older Versions (8.x – &lt;10)</h4>\n",
+    "                        <div id=\"sentiment_older_plot\" class=\"plot-container\"></div>\n",
+    "                    </div>\n",
+    "                    </div>\n",
+    "                    <div class=\"col-6\">\n",
+    "                    <div class=\"viz-container\">\n",
+    "                        <h4>Sentiment Distribution: Unknown Versions</h4>\n",
+    "                        <div id=\"sentiment_unknown_plot\" class=\"plot-container\"></div>\n",
+    "                    </div>\n",
+    "                    </div>\n",
     "                </div>\n",
     "                \n",
     "                {unknown_versions_html}\n",
@@ -27028,14 +27082,35 @@
     "                </div>\n",
     "                \n",
     "                <div class=\"version-insight-box\">\n",
-    "                    <h4>Critical Version Insights</h4>\n",
+    "                    <h4>Critical Version Insights (AI Generated)</h4>\n",
     "                    <p>Analysis of version performance reveals:</p>\n",
     "                    <ul>\n",
-    "                        <li>A significant decline in ratings from version 6.x (3.59/5.0) to version 7.x (1.89/5.0)</li>\n",
-    "                        <li>Version 6.0.5 maintains the highest user satisfaction with 72.0% positive sentiment</li>\n",
-    "                        <li>Version 7.2.4 shows critical issues with 82.5% negative sentiment, indicating serious regression</li>\n",
-    "                        <li>Reviews from users with \"Unknown\" versions consistently show lower ratings (2.35/5.0), suggesting compatibility or update issues</li>\n",
+    "                        <li><strong>Major Version Trends</strong>\n",
+    "                        <ul>\n",
+    "                            <li><strong>Peak in 9.x:</strong> Upgrading from 8.x to 9.x delivered a clear boost in satisfaction—major version 9 averages <strong>3.11/5.0</strong> (n=1,481), well above the 3.0 benchmark, compared with <strong>2.43/5.0</strong> for 8.x (n=14) and <strong>2.53/5.0</strong> for 10.x (n=2,720).</li>\n",
+    "                            <li><strong>Regression in 10.x:</strong> After the 9.x high, 10.x sees a drop to <strong>2.53/5.0</strong>, indicating that changes introduced in the 10.x line have negatively impacted user experience.</li>\n",
+    "                        </ul>\n",
+    "                        </li>\n",
+    "                        <li><strong>Stand-out Releases</strong>\n",
+    "                        <ul>\n",
+    "                            <li><strong>9.2.14.7:</strong> Highest average rating at <strong>3.25/5.0</strong> with <strong>55% positive sentiment</strong>.</li>\n",
+    "                            <li><strong>10.11.15:</strong> Best performer in 10.x at <strong>2.74/5.0</strong> with <strong>45% positive sentiment</strong>, yet still behind the 9.x peak.</li>\n",
+    "                        </ul>\n",
+    "                        </li>\n",
+    "                        <li><strong>Problematic Releases</strong>\n",
+    "                        <ul>\n",
+    "                            <li><strong>Unknown versions:</strong> Lowest at <strong>2.35/5.0</strong> with only <strong>34% positive</strong> and <strong>65% negative</strong>—users on unreported builds likely face compatibility or update-tracking issues.</li>\n",
+    "                            <li><strong>Later 10.x builds (10.11.20 &amp; 10.11.22):</strong> Ratings around <strong>2.43–2.48</strong> and <strong>61–63% negative sentiment</strong>, marking a clear drift downward over the 10.x lifecycle.</li>\n",
+    "                        </ul>\n",
+    "                        </li>\n",
+    "                        <li><strong>Sentiment Red Flags</strong>\n",
+    "                        <ul>\n",
+    "                            <li><strong>9.2.14.2:</strong> Dips to <strong>35% positive</strong> vs. <strong>50% negative</strong>, indicating uneven quality even within 9.x.</li>\n",
+    "                            <li><strong>10.x overall:</strong> Negative sentiment consistently around <strong>50–63%</strong>, underscoring systemic issues in the latest major version.</li>\n",
+    "                        </ul>\n",
+    "                        </li>\n",
     "                    </ul>\n",
+    "                    <p><strong>Recommendation:</strong> Prioritize rollback or fixes for the problematic 10.x changes, promote 9.2.14.7’s stability improvements, and enforce better version reporting to eliminate “Unknown” usage and address post-9.x regressions.</p>\n",
     "                </div>\n",
     "            </div>\n",
     "            \n",
