--- a/notebooks/review_analysis_demo.ipynb
+++ b/notebooks/review_analysis_demo.ipynb
@@ -25601,7 +25601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -26909,7 +26909,7 @@
     "    <div class=\"container\">\n",
     "        <div class=\"dashboard-header\">\n",
     "            <h1>IndusMobile App Review Analysis Dashboard</h1>\n",
-    "            <p>This comprehensive dashboard provides a detailed analysis of 10,000+ user reviews including sentiment analysis, \n",
+    "            <p>This comprehensive dashboard provides a detailed analysis of 5000 user reviews including sentiment analysis, \n",
     "            version-specific performance, and trending patterns that can help guide app development priorities.</p>\n",
     "            \n",
     "            <div class=\"overview-stats\">\n",
